Fix html linter and accessbility

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -151,6 +151,7 @@
                              class="bi bi-file-person"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             role="img"
                              focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -212,6 +213,7 @@
                      fill="currentColor"
                      class="bi bi-exclamation-triangle"
                      viewBox="0 0 16 16"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -250,6 +252,7 @@
                      fill="currentColor"
                      class="bi bi-exclamation-triangle"
                      viewBox="0 0 16 16"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -288,6 +291,7 @@
                      fill="currentColor"
                      class="bi bi-exclamation-triangle"
                      viewBox="0 0 16 16"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -319,7 +323,9 @@
                        target="_blank"
                        rel="noopener noreferrer nofollow">
                         <i class="bi bi-youtube align-middle"
-                           style="font-size: 1.5rem;"></i>
+                           style="font-size: 1.5rem;"
+                           role="img"
+                           aria-hidden="true"></i>
                         <span class="ml-1"
                               i18n>How to - Fragebogen Online</span>
                     </a>
