--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -1,6 +1,7 @@
 <div class="p-0">
     <ng-container *ngIf="chartOption?.series.length !== 0">
-        <h3 i18n>Zeitliche Entwicklung</h3>
+        <div class="h3"
+             i18n>Zeitliche Entwicklung</div>
         <ng-container *ngIf="features?.features[0].properties.gema === 'Bremerhaven'; else bremen">
             <p>
                 <span i18n>Die Bodenrichtwerte in Bremerhaven werden in einem Zweijahreszyklus festgelegt.
