--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
                      class="bi bi-list-ul"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -68,6 +69,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -86,6 +88,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -117,6 +120,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -135,6 +139,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -166,6 +171,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -184,6 +190,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -215,6 +222,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -233,6 +241,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -264,6 +273,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -282,6 +292,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -313,6 +324,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -331,6 +343,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -426,6 +439,7 @@
                      class="bi bi-file-earmark-medical"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -495,6 +509,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -510,6 +525,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -538,6 +554,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -553,6 +570,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -581,6 +599,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -596,6 +615,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -624,6 +644,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -639,6 +660,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -667,6 +689,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -682,6 +705,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -710,6 +734,7 @@
                                              class="bi bi-arrow-up"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -725,6 +750,7 @@
                                              class="bi bi-arrow-down"
                                              fill="currentColor"
                                              xmlns="http://www.w3.org/2000/svg"
+                                             role="img"
                                              focusable="false"
                                              aria-hidden="true">
                                             <path
@@ -778,6 +804,7 @@
                          class="bi bi-plus"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -802,6 +829,7 @@
                          class="bi bi-cloud-arrow-up"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
