--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -11,6 +11,7 @@
              class="bi bi-file-earmark-medical"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
+             role="img"
              focusable="false"
              aria-hidden="true">
             <path
@@ -31,6 +32,7 @@
                  class="bi bi-backspace"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 role="img"
                  focusable="false"
                  aria-hidden="true">
                 <path fill-rule="evenodd"
@@ -93,6 +95,7 @@
                      class="bi bi-pencil-square"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -114,6 +117,7 @@
                      class="bi bi-arrows-fullscreen"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -141,6 +145,7 @@
                      class="bi bi-cloud-arrow-down"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -163,6 +168,7 @@
                      class="bi bi-gear"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -185,6 +191,7 @@
                      class="bi bi-globe2"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -205,6 +212,7 @@
                      class="bi bi-archive-fill"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -225,6 +233,7 @@
                      class="bi bi-trash-fill"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -246,6 +255,7 @@
                  class="bi bi-list-ul"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 role="img"
                  focusable="false"
                  aria-hidden="true">
                 <path fill-rule="evenodd"
@@ -302,6 +312,7 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -320,6 +331,7 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -351,6 +363,7 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -369,6 +382,7 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -400,6 +414,7 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -418,6 +433,7 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -442,8 +458,8 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -458,8 +474,8 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -483,8 +499,8 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -499,8 +515,8 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
-                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -526,6 +542,7 @@
                                      class="bi bi-link-45deg"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -555,6 +572,7 @@
                                      class="bi bi-pencil-square"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -583,6 +601,7 @@
                                      class="bi bi-binoculars-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -603,6 +622,7 @@
                                      class="bi bi-arrow-clockwise"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -625,6 +645,7 @@
                                      class="bi bi-arrow-clockwise"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -647,6 +668,7 @@
                                      class="bi bi-trash-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -677,6 +699,7 @@
                      class="bi bi-plus"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -702,6 +725,7 @@
                      class="bi bi-cloud-arrow-down"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
