--- a/power/src/app/fragebogen/details/settings/settings.component.html
+++ b/power/src/app/fragebogen/details/settings/settings.component.html
@@ -52,6 +52,7 @@
                  class="bi bi-share"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 role="img"
                  focusable="false"
                  aria-hidden="true">
                 <path fill-rule="evenodd"
