--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -166,6 +166,7 @@
              class="bi bi-dash"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
+             role="img"
              focusable="false"
              aria-hidden="true">
             <path fill-rule="evenodd"
@@ -185,6 +186,7 @@
              class="bi bi-plus"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
+             role="img"
              focusable="false"
              aria-hidden="true">
             <path fill-rule="evenodd"
