--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -18,6 +18,7 @@
                      class="bi bi-tools"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -68,6 +69,7 @@
                              class="bi bi-clipboard"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             role="img"
                              focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -97,6 +99,7 @@
                      class="bi bi-star-fill"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -177,6 +180,7 @@
                                      class="bi bi-file-earmark-plus"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -204,6 +208,7 @@
                                      class="bi bi-trash-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -231,6 +236,7 @@
                          class="bi bi-arrow-clockwise"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -254,6 +260,7 @@
                          class="bi bi-arrow-counterclockwise"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -276,6 +283,7 @@
                          class="bi bi-arrows-fullscreen"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -304,6 +312,7 @@
                          class="bi bi-gear custom-animation"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -327,6 +336,7 @@
                          class="bi bi-hdd"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -350,6 +360,7 @@
                          class="bi bi-backspace"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -405,6 +416,7 @@
                                      class="bi bi-grip-vertical"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -426,6 +438,7 @@
                                      class="bi bi-caret-up"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -447,6 +460,7 @@
                                      class="bi bi-caret-down"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -472,6 +486,7 @@
                                          fill="currentColor"
                                          class="bi bi-box-arrow-in-up-right"
                                          viewBox="0 0 16 16"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path fill-rule="evenodd"
@@ -510,6 +525,7 @@
                                      class="bi bi-clipboard"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -533,6 +549,7 @@
                                      class="bi bi-star"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -554,6 +571,7 @@
                                      class="bi bi-star-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -574,6 +592,7 @@
                                      class="bi bi-pencil-square"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path
@@ -596,6 +615,7 @@
                                      class="bi bi-trash-fill"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     role="img"
                                      focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
