--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -24,7 +24,8 @@
             https://daringfireball.net/projects/markdown/syntax</a>
     </p>
 
-    <h4>Hilfe zur Formatierung</h4>
+    <div class="h4"
+         i18n>Hilfe zur Formatierung</div>
     <table class="table table-striped table-bordered .table-responsive">
         <thead>
             <tr>
