--- a/power/src/app/fragebogen/editor/answers/answers.component.html
+++ b/power/src/app/fragebogen/editor/answers/answers.component.html
@@ -49,6 +49,7 @@
                          class="bi bi-caret-up"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -70,6 +71,7 @@
                          class="bi bi-caret-down"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -93,6 +95,7 @@
                          class="bi bi-trash-fill"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -134,6 +137,7 @@
                              class="bi bi-trash-fill"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             role="img"
                              focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -157,6 +161,7 @@
                          class="bi bi-cloud-arrow-up"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -190,6 +195,7 @@
          class="bi bi-plus"
          fill="currentColor"
          xmlns="http://www.w3.org/2000/svg"
+         role="img"
          focusable="false"
          aria-hidden="true">
         <path fill-rule="evenodd"
