--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -13,6 +13,7 @@
                          class="bi bi-file-earmark-medical align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path
@@ -61,6 +62,7 @@
                                  class="bi bi-play-fill"
                                  fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg"
+                                 role="img"
                                  focusable="false"
                                  aria-hidden="true">
                                 <path
@@ -83,6 +85,7 @@
                          class="bi bi-search align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -108,6 +111,7 @@
                              class="bi bi-box-arrow-right"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             role="img"
                              focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -134,6 +138,7 @@
                          class="bi bi-person-circle align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path
@@ -168,6 +173,7 @@
                          class="bi bi-person-bounding-box align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -193,6 +199,7 @@
                              class="bi bi-box-arrow-right"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             role="img"
                              focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
