--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -10,6 +10,7 @@
                  class="bi bi-file-earmark-medical"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 role="img"
                  focusable="false"
                  aria-hidden="true">
                 <path
@@ -62,6 +63,7 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -78,6 +80,7 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -108,6 +111,7 @@
                                          class="bi bi-arrow-up"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
@@ -124,6 +128,7 @@
                                          class="bi bi-arrow-down"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg"
+                                         role="img"
                                          focusable="false"
                                          aria-hidden="true">
                                         <path
