--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -67,13 +67,13 @@
              role="rowgroup">
             <div class="row"
                  role="row">
-                <h5 class="col-md-12 mb-0"
-                    role="columnheader">
+                <div class="h5 col-md-12 mb-0"
+                     role="columnheader">
                     <strong *ngIf="rd.name !== 'Niedersachsen'"
                             class="mr-1"
                             i18n>Gutachterausschuss</strong>
                     <strong>{{rd.name}}</strong>
-                </h5>
+                </div>
             </div>
         </div>
         <div class="card-body"
@@ -95,8 +95,10 @@
                                [attr.aria-label]="ariaLabelBericht(bj.key, rd.name)">
                             <span>
                                 <i class="bi bi-plus-circle remove-check"
+                                   role="img"
                                    aria-hidden="true"></i>
                                 <i class="bi bi-dash-circle display-check"
+                                   role="img"
                                    aria-hidden="true"></i>
                             </span>
                             <span>
@@ -113,6 +115,7 @@
                         <div class="dl">
                             <span class="tc">
                                 <i class="bi bi-download"
+                                   role="img"
                                    aria-hidden="true"></i>
                             </span>
                             <span class="tc">
