--- a/power/src/app/shared/advanced-search/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/advanced-search/flurstueck-search/flurstueck-search.component.html
@@ -105,6 +105,7 @@
              class="bi bi-search"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
+             role="img"
              focusable="false"
              aria-hidden="true">
             <path fill-rule="evenodd"
