--- a/power/src/app/shared/alerts/alerts.component.html
+++ b/power/src/app/shared/alerts/alerts.component.html
@@ -25,6 +25,7 @@
                      class="bi bi-info-circle"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
