--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -19,6 +19,7 @@
                      class="bi bi-info-circle-fill"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -53,6 +54,7 @@
                          class="bi bi-envelope"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -84,6 +86,7 @@
                          class="bi bi-clipboard"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         role="img"
                          focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -107,6 +110,7 @@
                      class="bi bi-journals"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     role="img"
                      focusable="false"
                      aria-hidden="true">
                     <path
@@ -142,6 +146,7 @@
                              class="bi bi-search"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             role="img"
                              focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
