--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -10,6 +10,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Bodenrichtwerte"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -34,6 +35,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Grundstücksmarktberichte"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -55,6 +57,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Landesgrundstücksmarktdaten"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -76,6 +79,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Immobilienpreisindex"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -99,6 +103,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Immobilien-Preis-Kalkulator"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -122,6 +127,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Formulare"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -145,6 +151,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="OGC Darstellungs- und Downloaddienste"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -168,6 +175,7 @@
                 <img src="./assets/images/bg-bodenrichtwerte.png"
                      i18n-alt
                      alt="Feedback"
+                     aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
@@ -220,7 +228,8 @@
                     <img src="./assets/images/bodenrichtwerte.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="Bodenrichtwerte">
+                         alt="Bodenrichtwerte"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
@@ -257,7 +266,8 @@
                     <img src="./assets/images/grundstuecksmarktberichte.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="Grundstücksmarktberichte">
+                         alt="Grundstücksmarktberichte"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
@@ -297,7 +307,8 @@
                     <img src="./assets/images/landesgrundstuecksmarktdaten.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="Landesgrundstücksmarktdaten">
+                         alt="Landesgrundstücksmarktdaten"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
@@ -334,7 +345,8 @@
                     <img src="./assets/images/immobilienpreisindex.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="Immobilienpreisindex">
+                         alt="Immobilienpreisindex"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
@@ -380,7 +392,8 @@
                     <img src="./assets/images/immobilienpreiskalkulator.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="Immobilienpreiskalkulator">
+                         alt="Immobilienpreiskalkulator"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
@@ -435,6 +448,7 @@
                                  class="bi bi-play-fill"
                                  fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg"
+                                 role="img"
                                  focusable="false"
                                  aria-hidden="true">
                                 <path
@@ -455,7 +469,8 @@
                     <img src="./assets/images/forms.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="Formulare">
+                         alt="Formulare"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
@@ -489,7 +504,8 @@
                     <img src="./assets/images/ogcdienste.png"
                          class="figure-img img-thumbnail img-fluid mx-auto w-100"
                          i18n-alt
-                         alt="OGC Darstellungs- und Downloaddienste">
+                         alt="OGC Darstellungs- und Downloaddienste"
+                         aria-hidden="true">
                 </a>
             </div>
         </div>
